--- a/index.html
+++ b/index.html
@@ -420,44 +420,44 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="customers__title">Nasi klienci</h2>
+          <h2 class="customers-title">Nasi klienci</h2>
           <ul class="customers">
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a href="">
                 <svg class="customers__icon">
                   <use href="./images/symbol-defs.svg#icon-logo6"></use>
